--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/axios": "^0.9.36",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.6.2",
     "next": "15.5.2",
     "react": "19.1.0",
